--- a/package.json
+++ b/package.json
@@ -35,6 +35,15 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "typedoc": "^0.23.10",
     "typescript": "~4.7.2"
-  }
+  },
+    "compilerOptions": {
+        "normalTypeScriptOptions": "here"
+    },
+    "typedocOptions": {
+        "entryPoints": ["src/index.ts"],
+        "out": "docs"
+    }
 }
+
