--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/cli": "~14.1.1",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "angular-cli-ghpages": "^1.0.3",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -38,12 +39,13 @@
     "typedoc": "^0.23.10",
     "typescript": "~4.7.2"
   },
-    "compilerOptions": {
-        "normalTypeScriptOptions": "here"
-    },
-    "typedocOptions": {
-        "entryPoints": ["src/index.ts"],
-        "out": "docs"
-    }
+  "compilerOptions": {
+    "normalTypeScriptOptions": "here"
+  },
+  "typedocOptions": {
+    "entryPoints": [
+      "src/index.ts"
+    ],
+    "out": "docs"
+  }
 }
-
